feat: Implement strict season-based feature engineering with statistical alignment BREAKING CHANGE: Feature calculations now require season context ## Core Changes ### Repository Layer (MatchRepository.java) - Add 10 new season-filtered queries with DB-level LIMIT - All queries enforce: season + matchDate < beforeDate + ORDER BY DESC - Add null filtering for shots/corners data at DB level - Add findSeasonForDate() for season determination - Add H2H query limited to 5 matches (cross-season) ### Feature Engineering Service - Refactor to use strict season-based filtering - Apply LIMIT at DB level instead of Java slicing - H2H uses last 5 matches only (cross-season allowed) - Days since last match ignores cross-season gaps (returns 14) - League position calculated within same season only - Win/unbeaten streaks stop at first non-qualifying result - Exclude null shots/corners data from averages ### League Position Service - Add new getTeamPositionAsOfDate(team, season, date) method - Sorting: points DESC -> GD DESC -> goals scored DESC -> name ASC - Season-scoped calculation only ### Statistical Corrections - H2H priors: Home 46.2%, Draw 26.8%, Away 27.0% (PL 1992-2024) - Standardized windows: RECENT_FORM=5, MEDIUM_TERM=10, SEASON=20 - Add null safety in Match.java helper methods ### New Features - TeamValidationService with 25+ team aliases - RefereeStatsService with strictness index - RefereeController with REST endpoints - Half-time features (lead rate, comeback rate) ### Tests - 296 tests passing - Add historical PL table validation test - Add streak calculation tests - Add null safety tests - Update all tests for season-based methods Closes: Statistical alignment with official Premier League methodology