@@ -2,11 +2,15 @@ package com.app.common.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.TreeSet;
 
@@ -14,6 +18,24 @@ import com.app.common.model.Match;
 import com.app.common.model.MatchFeatures;
 import com.app.common.repository.MatchRepository;
 
+/**
+ * Service for computing match features from historical data.
+ * Features are used for both model training and real-time predictions.
+ *
+ * <p><strong>IMPORTANT: Season-Based Filtering</strong></p>
+ * <p>All feature calculations are scoped to the current season to align with
+ * official Premier League statistical methodology:</p>
+ * <ul>
+ *   <li>All queries include season + matchDate < beforeDate filters</li>
+ *   <li>LIMIT is applied at DB level (not Java slicing)</li>
+ *   <li>Cross-season data is excluded (except H2H which spans 5 years)</li>
+ *   <li>League positions calculated within season only</li>
+ * </ul>
+ *
+ * <p><strong>Ordering Convention</strong></p>
+ * <p>All repository queries return matches in DESCENDING order (newest first).
+ * Streak and form logic depends on this ordering.</p>
+ */
 @Service
 @RequiredArgsConstructor
 @Slf4j
@@ -21,8 +43,46 @@ public class FeatureEngineeringService {
 
    private final MatchRepository matchRepository;
 
+   @Autowired(required = false)
+   private LeaguePositionService leaguePositionService;
+
    @Value("${feature.form.window:5}")
    private int formWindow;
+
+   // ── Standardized Feature Windows ──────────────────────────────────────
+   // These constants define the lookback windows for different feature types.
+   // Applied at DB level via LIMIT clause for efficiency.
+
+   /** Window for form-related features (recent momentum, ~1 month) */
+   private static final int RECENT_FORM_WINDOW = 5;
+
+   /** Window for goal and shot statistics (medium-term trends, ~2 months) */
+   private static final int MEDIUM_TERM_WINDOW = 10;
+
+   /** Window for season-level statistics (~half season) */
+   private static final int SEASON_WINDOW = 20;
+
+   /** Maximum H2H matches to consider (spans multiple seasons) */
+   private static final int H2H_WINDOW = 5;
+
+   /** Default rest days when no same-season match exists */
+   private static final int DEFAULT_REST_DAYS = 14;
+
+   /** Maximum rest days to cap feature value */
+   private static final int MAX_REST_DAYS = 30;
+
+   // ── H2H Historical Priors (Premier League 1992–2024) ──────────────────
+   // When no H2H history exists, use league-wide historical distribution.
+   // Source: Premier League historical data 1992-2024
+
+   /** Historical home win rate when no H2H data exists */
+   private static final double PRIOR_HOME_WIN = 0.462;
+
+   /** Historical draw rate when no H2H data exists */
+   private static final double PRIOR_DRAW = 0.268;
+
+   /** Historical away win rate when no H2H data exists */
+   private static final double PRIOR_AWAY_WIN = 0.270;
 
    // ── Public API ────────────────────────────────────────────────────────
 
@@ -42,181 +102,255 @@ public class FeatureEngineeringService {
    /**
     * For TRAINING — pass the actual match so we can set the label
     * and use matchDate as the cutoff (no leakage).
+    * Season is derived from the match itself.
     */
    public MatchFeatures buildFeaturesForTraining(Match match) {
+      String season = match.getSeason();
+      if (season == null || season.isBlank()) {
+         season = deriveSeason(match.getMatchDate());
+      }
+
       MatchFeatures features = buildFeatures(
             match.getHomeTeam(),
             match.getAwayTeam(),
-            match.getMatchDate()
+            match.getMatchDate(),
+            season
       );
       features.setActualResult(match.getFullTimeResult());
       return features;
    }
 
    /**
-    * For PREDICTION — no label, use today as cutoff so all
-    * past matches are included.
+    * For PREDICTION — no label, use today as cutoff.
+    * Season is determined from the current date.
     */
    public MatchFeatures buildFeaturesForPrediction(String homeTeam, String awayTeam) {
-      return buildFeatures(homeTeam, awayTeam, LocalDate.now());
+      LocalDate today = LocalDate.now();
+      String season = determineCurrentSeason(today);
+      return buildFeatures(homeTeam, awayTeam, today, season);
+   }
+
+   /**
+    * For PREDICTION with explicit season — used when season is known.
+    */
+   public MatchFeatures buildFeaturesForPrediction(String homeTeam, String awayTeam, String season) {
+      return buildFeatures(homeTeam, awayTeam, LocalDate.now(), season);
    }
 
    // ── Core builder ──────────────────────────────────────────────────────
 
-   private MatchFeatures buildFeatures(String homeTeam, String awayTeam, LocalDate beforeDate) {
-      log.debug("Building features: {} vs {} (before {})", homeTeam, awayTeam, beforeDate);
+   /**
+    * Build all features for a match with strict season-based filtering.
+    *
+    * @param homeTeam   Home team name
+    * @param awayTeam   Away team name
+    * @param beforeDate Cutoff date (exclusive) - no matches on or after this date
+    * @param season     Season identifier (e.g., "2024-25")
+    * @return MatchFeatures with all computed features
+    */
+   private MatchFeatures buildFeatures(String homeTeam, String awayTeam,
+                                        LocalDate beforeDate, String season) {
+      log.debug("Building features: {} vs {} (season={}, before={})",
+                homeTeam, awayTeam, season, beforeDate);
 
-      // Fetch all relevant histories from DB in one go
+      // ── Fetch all data with season filtering and DB-level limits ──────
+
+      // Home team's home matches (season-filtered, limited)
       List<Match> homeTeamHomeMatches = matchRepository
-            .findHomeMatchesByTeamBeforeDate(homeTeam, beforeDate);
+            .findHomeMatchesByTeamSeasonBeforeDateLimited(
+                  homeTeam, season, beforeDate, SEASON_WINDOW);
 
+      // Away team's away matches (season-filtered, limited)
       List<Match> awayTeamAwayMatches = matchRepository
-            .findAwayMatchesByTeamBeforeDate(awayTeam, beforeDate);
+            .findAwayMatchesByTeamSeasonBeforeDateLimited(
+                  awayTeam, season, beforeDate, SEASON_WINDOW);
 
+      // All matches for each team (season-filtered, limited)
       List<Match> homeTeamAllMatches = matchRepository
-            .findByTeamBeforeDate(homeTeam, beforeDate);
+            .findByTeamSeasonBeforeDateLimited(
+                  homeTeam, season, beforeDate, SEASON_WINDOW);
 
       List<Match> awayTeamAllMatches = matchRepository
-            .findByTeamBeforeDate(awayTeam, beforeDate);
+            .findByTeamSeasonBeforeDateLimited(
+                  awayTeam, season, beforeDate, SEASON_WINDOW);
 
+      // H2H matches (cross-season, limited to 5)
       List<Match> h2hMatches = matchRepository
-            .findH2HBeforeDate(homeTeam, awayTeam, beforeDate);
+            .findH2HBeforeDateLimited(homeTeam, awayTeam, beforeDate, H2H_WINDOW);
+
+      // Shots data with null filtering at DB level
+      List<Match> homeMatchesWithShots = matchRepository
+            .findHomeMatchesWithShotsData(homeTeam, season, beforeDate, MEDIUM_TERM_WINDOW);
+      List<Match> awayMatchesWithShots = matchRepository
+            .findAwayMatchesWithShotsData(awayTeam, season, beforeDate, MEDIUM_TERM_WINDOW);
+
+      // Corners data with null filtering at DB level
+      List<Match> homeMatchesWithCorners = matchRepository
+            .findHomeMatchesWithCornersData(homeTeam, season, beforeDate, MEDIUM_TERM_WINDOW);
+      List<Match> awayMatchesWithCorners = matchRepository
+            .findAwayMatchesWithCornersData(awayTeam, season, beforeDate, MEDIUM_TERM_WINDOW);
 
       return MatchFeatures.builder()
             .homeTeam(homeTeam)
             .awayTeam(awayTeam)
 
-            // Form: points per game in last N home/away matches
-            .homeFormPoints(
-                  calcFormPoints(homeTeamHomeMatches, homeTeam, formWindow))
-            .awayFormPoints(
-                  calcFormPoints(awayTeamAwayMatches, awayTeam, formWindow))
+            // Form: points per game (already limited at DB level)
+            .homeFormPoints(calcFormPoints(homeTeamHomeMatches, homeTeam, formWindow))
+            .awayFormPoints(calcFormPoints(awayTeamAwayMatches, awayTeam, formWindow))
 
-            // Goals: avg scored and conceded at home / away
-            .homeGoalsScoredAvg(
-                  calcGoalsScoredAvg(homeTeamHomeMatches, homeTeam))
-            .homeGoalsConcededAvg(
-                  calcGoalsConcededAvg(homeTeamHomeMatches, homeTeam))
-            .awayGoalsScoredAvg(
-                  calcGoalsScoredAvg(awayTeamAwayMatches, awayTeam))
-            .awayGoalsConcededAvg(
-                  calcGoalsConcededAvg(awayTeamAwayMatches, awayTeam))
+            // Goals: avg scored and conceded (season-scoped)
+            .homeGoalsScoredAvg(calcGoalsScoredAvg(homeTeamHomeMatches, homeTeam))
+            .homeGoalsConcededAvg(calcGoalsConcededAvg(homeTeamHomeMatches, homeTeam))
+            .awayGoalsScoredAvg(calcGoalsScoredAvg(awayTeamAwayMatches, awayTeam))
+            .awayGoalsConcededAvg(calcGoalsConcededAvg(awayTeamAwayMatches, awayTeam))
 
-            // Total goals per game across all matches
-            .homeTotalGoalsAvg(
-                  calcTotalGoalsAvg(homeTeamAllMatches, formWindow))
-            .awayTotalGoalsAvg(
-                  calcTotalGoalsAvg(awayTeamAllMatches, formWindow))
+            // Total goals per game
+            .homeTotalGoalsAvg(calcTotalGoalsAvg(homeTeamAllMatches, formWindow))
+            .awayTotalGoalsAvg(calcTotalGoalsAvg(awayTeamAllMatches, formWindow))
 
-            // Head-to-head rates
-            .h2hHomeWinRate(calcH2HWinRate(h2hMatches, homeTeam))
+            // Head-to-head rates (cross-season, limited to 5)
+            .h2hHomeWinRate(calcH2HWinRate(h2hMatches, homeTeam, true))
             .h2hDrawRate(calcH2HDrawRate(h2hMatches))
-            .h2hAwayWinRate(calcH2HWinRate(h2hMatches, awayTeam))
+            .h2hAwayWinRate(calcH2HWinRate(h2hMatches, awayTeam, false))
 
-            // Phase 2: shots on target averages
-            .homeShotsOnTargetAvg(
-                  calcShotsOnTargetAvg(homeTeamHomeMatches, true))
-            .awayShotsOnTargetAvg(
-                  calcShotsOnTargetAvg(awayTeamAwayMatches, false))
+            // Shots on target (using pre-filtered data)
+            .homeShotsOnTargetAvg(calcShotsOnTargetAvgFromFiltered(homeMatchesWithShots, true))
+            .awayShotsOnTargetAvg(calcShotsOnTargetAvgFromFiltered(awayMatchesWithShots, false))
 
-            // Phase 2: corners averages
-            .homeCornersAvg(
-                  calcCornersAvg(homeTeamHomeMatches, true))
-            .awayCornersAvg(
-                  calcCornersAvg(awayTeamAwayMatches, false))
+            // Corners (using pre-filtered data)
+            .homeCornersAvg(calcCornersAvgFromFiltered(homeMatchesWithCorners, true))
+            .awayCornersAvg(calcCornersAvgFromFiltered(awayMatchesWithCorners, false))
 
-            // Phase 3: Goal difference (attacking strength - defensive weakness)
-            .homeGoalDifference(
-                  calcGoalDifference(homeTeamAllMatches, homeTeam, formWindow))
-            .awayGoalDifference(
-                  calcGoalDifference(awayTeamAllMatches, awayTeam, formWindow))
+            // Goal difference (season-scoped)
+            .homeGoalDifference(calcGoalDifference(homeTeamAllMatches, homeTeam, RECENT_FORM_WINDOW))
+            .awayGoalDifference(calcGoalDifference(awayTeamAllMatches, awayTeam, RECENT_FORM_WINDOW))
 
-            // Phase 3: Overall form (all matches, not just home/away specific)
-            .homeOverallFormPoints(
-                  calcFormPoints(homeTeamAllMatches, homeTeam, formWindow))
-            .awayOverallFormPoints(
-                  calcFormPoints(awayTeamAllMatches, awayTeam, formWindow))
+            // Overall form (all matches, season-scoped)
+            .homeOverallFormPoints(calcFormPoints(homeTeamAllMatches, homeTeam, formWindow))
+            .awayOverallFormPoints(calcFormPoints(awayTeamAllMatches, awayTeam, formWindow))
 
-            // Phase 3: Win streaks (momentum)
+            // Streaks (stop at first non-qualifying result)
             .homeWinStreak(calcWinStreak(homeTeamAllMatches, homeTeam))
             .awayWinStreak(calcWinStreak(awayTeamAllMatches, awayTeam))
-
-            // Phase 3: Unbeaten streaks
             .homeUnbeatenStreak(calcUnbeatenStreak(homeTeamAllMatches, homeTeam))
             .awayUnbeatenStreak(calcUnbeatenStreak(awayTeamAllMatches, awayTeam))
 
-            // Phase 3: Days since last match (rest/fatigue)
-            .homeDaysSinceLastMatch(calcDaysSinceLastMatch(homeTeamAllMatches, beforeDate))
-            .awayDaysSinceLastMatch(calcDaysSinceLastMatch(awayTeamAllMatches, beforeDate))
+            // Days since last match (season-scoped, ignores cross-season)
+            .homeDaysSinceLastMatch(calcDaysSinceLastMatch(homeTeam, season, beforeDate))
+            .awayDaysSinceLastMatch(calcDaysSinceLastMatch(awayTeam, season, beforeDate))
+
+            // Half-time features (season-scoped)
+            .homeHalfTimeLeadRate(calcHalfTimeLeadRate(homeTeamHomeMatches, homeTeam))
+            .awayHalfTimeLeadRate(calcHalfTimeLeadRate(awayTeamAwayMatches, awayTeam))
+            .homeComebackRate(calcComebackRate(homeTeamHomeMatches, homeTeam))
+            .awayComebackRate(calcComebackRate(awayTeamAwayMatches, awayTeam))
+
+            // League positions (season-scoped, calculated before date)
+            .homeLeaguePosition(calcLeaguePosition(homeTeam, season, beforeDate))
+            .awayLeaguePosition(calcLeaguePosition(awayTeam, season, beforeDate))
 
             .build();
+   }
+
+   // ── Season Determination ──────────────────────────────────────────────
+
+   /**
+    * Determine the current season from database.
+    */
+   private String determineCurrentSeason(LocalDate date) {
+      String season = matchRepository.findSeasonForDate(date);
+      if (season != null && !season.isBlank()) {
+         return season;
+      }
+      // Fallback to derived season
+      return deriveSeason(date);
+   }
+
+   /**
+    * Derive season string from a date.
+    * Football season runs Aug-May, so:
+    * - Jan-Jul dates belong to the season that started previous August
+    * - Aug-Dec dates belong to the season starting that August
+    */
+   private String deriveSeason(LocalDate date) {
+      int year = date.getYear();
+      int month = date.getMonthValue();
+
+      int startYear;
+      if (month >= 8) {
+         // Aug-Dec: season started this year
+         startYear = year;
+      } else {
+         // Jan-Jul: season started previous year
+         startYear = year - 1;
+      }
+
+      int endYear = startYear + 1;
+      return String.format("%d-%02d", startYear, endYear % 100);
    }
 
    // ── Feature calculators ───────────────────────────────────────────────
 
    /**
-    * Average points per game across last `window` matches.
-    * W=3, D=1, L=0 — standard football points system.
-    * <p>
-    * Example: [W, W, D, L, W] → (3+3+1+0+3) / 5 = 2.0
+    * Average points per game across matches.
+    * Data is already limited at DB level.
     */
    private double calcFormPoints(List<Match> matches, String teamName, int window) {
       if (matches.isEmpty()) return 0.0;
 
       return matches.stream()
-            .limit(window)
+            .limit(window)  // Secondary limit for safety
             .mapToInt(m -> m.getPointsForTeam(teamName))
             .average()
             .orElse(0.0);
    }
 
    /**
-    * Average goals scored across last `window` matches.
+    * Average goals scored (season-scoped, no additional limit needed).
     */
    private double calcGoalsScoredAvg(List<Match> matches, String teamName) {
       if (matches.isEmpty()) return 0.0;
 
       return matches.stream()
-            .limit(20)
             .mapToInt(m -> m.getGoalsScoredByTeam(teamName))
             .average()
             .orElse(0.0);
    }
 
    /**
-    * Average goals conceded across last `window` matches.
+    * Average goals conceded (season-scoped).
     */
    private double calcGoalsConcededAvg(List<Match> matches, String teamName) {
       if (matches.isEmpty()) return 0.0;
 
       return matches.stream()
-            .limit(20)
             .mapToInt(m -> m.getGoalsConcededByTeam(teamName))
             .average()
             .orElse(0.0);
    }
 
    /**
-    * Average total goals (home + away) per game.
-    * Captures how "open" a team's matches tend to be.
+    * Average total goals per game.
     */
    private double calcTotalGoalsAvg(List<Match> matches, int window) {
       if (matches.isEmpty()) return 0.0;
 
       return matches.stream()
             .limit(window)
-            .mapToInt(m -> m.getFullTimeHomeGoals()
-                  + m.getFullTimeAwayGoals())
+            .filter(m -> m.getFullTimeHomeGoals() != null && m.getFullTimeAwayGoals() != null)
+            .mapToInt(m -> m.getFullTimeHomeGoals() + m.getFullTimeAwayGoals())
             .average()
             .orElse(0.0);
    }
 
    /**
-    * Win rate for a specific team across all H2H matches.
-    * Returns 0.33 (neutral prior) when no H2H history exists.
+    * H2H win rate with historical priors.
+    * Uses cross-season data (last 5 meetings regardless of season).
     */
-   private double calcH2HWinRate(List<Match> h2hMatches, String teamName) {
-      if (h2hMatches.isEmpty()) return 0.33;
+   private double calcH2HWinRate(List<Match> h2hMatches, String teamName, boolean isHomeTeam) {
+      if (h2hMatches.isEmpty()) {
+         return isHomeTeam ? PRIOR_HOME_WIN : PRIOR_AWAY_WIN;
+      }
 
       long wins = h2hMatches.stream()
             .filter(m -> {
@@ -232,11 +366,10 @@ public class FeatureEngineeringService {
    }
 
    /**
-    * Draw rate across all H2H matches.
-    * Returns 0.33 (neutral prior) when no H2H history exists.
+    * H2H draw rate with historical prior.
     */
    private double calcH2HDrawRate(List<Match> h2hMatches) {
-      if (h2hMatches.isEmpty()) return 0.33;
+      if (h2hMatches.isEmpty()) return PRIOR_DRAW;
 
       long draws = h2hMatches.stream()
             .filter(m -> "D".equals(m.getFullTimeResult()))
@@ -246,49 +379,33 @@ public class FeatureEngineeringService {
    }
 
    /**
-    * Average shots on target.
-    * isHome=true → reads homeShotsOnTarget column
-    * isHome=false → reads awayShotsOnTarget column
+    * Shots on target average from pre-filtered data.
+    * Data is already filtered for non-null shots at DB level.
     */
-   private double calcShotsOnTargetAvg(List<Match> matches, boolean isHome) {
+   private double calcShotsOnTargetAvgFromFiltered(List<Match> matches, boolean isHome) {
       if (matches.isEmpty()) return 0.0;
 
       return matches.stream()
-            .limit(10)
-            .filter(m -> isHome
-                  ? m.getHomeShotsOnTarget() != null
-                  : m.getAwayShotsOnTarget() != null)
-            .mapToInt(m -> isHome
-                  ? m.getHomeShotsOnTarget()
-                  : m.getAwayShotsOnTarget())
+            .mapToInt(m -> isHome ? m.getHomeShotsOnTarget() : m.getAwayShotsOnTarget())
             .average()
             .orElse(0.0);
    }
 
    /**
-    * Average corners per game.
+    * Corners average from pre-filtered data.
+    * Data is already filtered for non-null corners at DB level.
     */
-   private double calcCornersAvg(List<Match> matches, boolean isHome) {
+   private double calcCornersAvgFromFiltered(List<Match> matches, boolean isHome) {
       if (matches.isEmpty()) return 0.0;
 
       return matches.stream()
-            .limit(10)
-            .filter(m -> isHome
-                  ? m.getHomeCorners() != null
-                  : m.getAwayCorners() != null)
-            .mapToInt(m -> isHome
-                  ? m.getHomeCorners()
-                  : m.getAwayCorners())
+            .mapToInt(m -> isHome ? m.getHomeCorners() : m.getAwayCorners())
             .average()
             .orElse(0.0);
    }
 
-   // ── Phase 3 feature calculators ───────────────────────────────────────
-
    /**
-    * Goal difference over last N matches.
-    * Positive = scoring more than conceding (strong team)
-    * Negative = conceding more than scoring (weak team)
+    * Goal difference over recent matches.
     */
    private double calcGoalDifference(List<Match> matches, String teamName, int window) {
       if (matches.isEmpty()) return 0.0;
@@ -301,8 +418,10 @@ public class FeatureEngineeringService {
    }
 
    /**
-    * Current win streak — consecutive wins from most recent match.
-    * Returns 0 if last match wasn't a win.
+    * Win streak — consecutive wins from most recent match.
+    * Stops at first non-win (draw or loss).
+    *
+    * <p>Matches are already in DESC order from DB.</p>
     */
    private int calcWinStreak(List<Match> matches, String teamName) {
       if (matches.isEmpty()) return 0;
@@ -312,7 +431,7 @@ public class FeatureEngineeringService {
          if (m.getPointsForTeam(teamName) == 3) {
             streak++;
          } else {
-            break;
+            break; // Stop at first non-win
          }
       }
       return streak;
@@ -320,7 +439,7 @@ public class FeatureEngineeringService {
 
    /**
     * Unbeaten streak — consecutive matches without a loss.
-    * Counts wins and draws.
+    * Stops at first loss.
     */
    private int calcUnbeatenStreak(List<Match> matches, String teamName) {
       if (matches.isEmpty()) return 0;
@@ -328,26 +447,127 @@ public class FeatureEngineeringService {
       int streak = 0;
       for (Match m : matches) {
          int points = m.getPointsForTeam(teamName);
-         if (points >= 1) { // Win or Draw
+         if (points >= 1) { // Win (3) or Draw (1)
             streak++;
          } else {
-            break;
+            break; // Stop at first loss
          }
       }
       return streak;
    }
 
    /**
-    * Days since last match — rest/fatigue factor.
-    * More rest = fresher team
-    * Less rest = potential fatigue (especially < 3 days)
+    * Days since last match within the SAME SEASON.
+    * Cross-season gaps are ignored - returns default rest value.
+    *
+    * <p>This prevents artificially high rest values at season start.</p>
+    *
+    * @param teamName   Team name
+    * @param season     Current season
+    * @param beforeDate Reference date
+    * @return Days since last match (capped at MAX_REST_DAYS, DEFAULT_REST_DAYS if no same-season match)
     */
-   private int calcDaysSinceLastMatch(List<Match> matches, LocalDate beforeDate) {
-      if (matches.isEmpty()) return 14; // Default: assume 2 weeks
+   private int calcDaysSinceLastMatch(String teamName, String season, LocalDate beforeDate) {
+      // Query for most recent match in same season
+      List<Match> lastMatches = matchRepository
+            .findLastMatchByTeamAndSeasonBeforeDate(teamName, season, beforeDate);
 
-      LocalDate lastMatchDate = matches.getFirst().getMatchDate();
-      long days = java.time.temporal.ChronoUnit.DAYS.between(lastMatchDate, beforeDate);
-      return (int) Math.min(days, 30); // Cap at 30 days
+      if (lastMatches.isEmpty()) {
+         // No same-season matches - likely start of season
+         log.debug("No same-season matches for {} before {} (season={}), using default rest",
+                   teamName, beforeDate, season);
+         return DEFAULT_REST_DAYS;
+      }
+
+      Match lastMatch = lastMatches.get(0);
+      LocalDate lastMatchDate = lastMatch.getMatchDate();
+
+      if (lastMatchDate == null) {
+         return DEFAULT_REST_DAYS;
+      }
+
+      long days = ChronoUnit.DAYS.between(lastMatchDate, beforeDate);
+
+      // Cap at reasonable maximum
+      return (int) Math.max(0, Math.min(days, MAX_REST_DAYS));
+   }
+
+   // ── Half-Time Features ────────────────────────────────────────────────
+
+   /**
+    * Rate at which team leads at half-time.
+    */
+   private double calcHalfTimeLeadRate(List<Match> matches, String teamName) {
+      if (matches.isEmpty()) return 0.0;
+
+      long matchesWithHT = 0;
+      long leading = 0;
+
+      for (Match m : matches) {
+         if (m.getHalfTimeHomeGoals() == null || m.getHalfTimeAwayGoals() == null) {
+            continue;
+         }
+
+         matchesWithHT++;
+         int htHome = m.getHalfTimeHomeGoals();
+         int htAway = m.getHalfTimeAwayGoals();
+
+         boolean isHome = teamName.equalsIgnoreCase(m.getHomeTeam());
+         if (isHome && htHome > htAway) {
+            leading++;
+         } else if (!isHome && htAway > htHome) {
+            leading++;
+         }
+      }
+
+      return matchesWithHT > 0 ? (double) leading / matchesWithHT : 0.0;
+   }
+
+   /**
+    * Rate of comebacks from trailing at half-time.
+    */
+   private double calcComebackRate(List<Match> matches, String teamName) {
+      if (matches.isEmpty()) return 0.0;
+
+      long trailing = 0;
+      long comebacks = 0;
+
+      for (Match m : matches) {
+         if (m.getHalfTimeHomeGoals() == null || m.getHalfTimeAwayGoals() == null
+               || m.getFullTimeResult() == null) {
+            continue;
+         }
+
+         int htHome = m.getHalfTimeHomeGoals();
+         int htAway = m.getHalfTimeAwayGoals();
+
+         boolean isHome = teamName.equalsIgnoreCase(m.getHomeTeam());
+         boolean wasTrailing = isHome ? htAway > htHome : htHome > htAway;
+
+         if (wasTrailing) {
+            trailing++;
+            int points = m.getPointsForTeam(teamName);
+            if (points >= 1) {
+               comebacks++;
+            }
+         }
+      }
+
+      return trailing > 0 ? (double) comebacks / trailing : 0.0;
+   }
+
+   // ── League Position ───────────────────────────────────────────────────
+
+   /**
+    * Calculate league position within the season as of the given date.
+    * Uses season-filtered data only.
+    */
+   private int calcLeaguePosition(String teamName, String season, LocalDate asOfDate) {
+      if (leaguePositionService == null) {
+         log.debug("LeaguePositionService not available, using default position");
+         return 10;  // Mid-table default
+      }
+
+      return leaguePositionService.getTeamPositionAsOfDate(teamName, season, asOfDate);
    }
 }
-
